Updated API Version

--- a/connections/proxy-create-connections.ipynb
+++ b/connections/proxy-create-connections.ipynb
@@ -36,7 +36,7 @@
     "    api_key=AOAI_KEY,\n",
     "    api_base=AOAI_ENDPOINT,\n",
     "    api_type=\"azure\",\n",
-    "    api_version=\"2023-07-01-preview\",\n",
+    "    api_version=\"2024-02-01\",\n",
     ")\n",
     "\n",
     "print(f\"Creating connection {connection.name}...\")\n",
@@ -137,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
